# training_canvas

./: .gitignore  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
concept/: frontend_database_concept.excalidraw
src/api/: app.py
src/blob_storage/: setup.py
src/database/: alembic.ini  create-database.sql
src/database/alembic/: env.py
src/database/alembic/versions/: 9266010841bf_create_projects_classes_images_and_.py
src/training_canvas/: connection.py
src/training_canvas/api/: app.py
src/training_canvas/blob_storage/: blob_storage.py  setup.py
src/training_canvas/core/: dataset.py  models.py  training.py  utils.py
src/training_canvas/database/: alembic.ini  connection.py  orm_models.py
src/training_canvas/database/alembic/: env.py
src/training_canvas/database/alembic/versions/: 9266010841bf_create_projects_classes_images_and_.py
tests/: README.md
